# duck-launcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo.yml
src/: main.rs
src/common/: file_downloader.rs  minecraft.rs  mod.rs  yggdrasil.rs
src/common/auth/: yggdrasil.rs
src/minecraft/: asset.rs  dependency.rs  mod.rs  version.rs  version_manifest.rs
src/ui/: mod.rs
src/ui/cui/: mod.rs
src/ui/gui/: app_main.rs  mod.rs
