[package]
name = "duck-launcher"
version = "0.1.0"
authors = ["FlashyReese <reeszrbteam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["macros"] }
reqwest = { version = "0.11.0", features = ["json", "blocking"]}
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
java-locator = "0.1.2"