[package]
name = "duck-launcher"
version = "0.1.0"
authors = ["FlashyReese <reeszrbteam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread"] }
reqwest = { version = "0.11.0", features = ["json"]}
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
semver = "0.11.0"
zip = "0.5.9"
regex = "1.4.3"